--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
 					<table cellspacing="0" cellpadding="5" border="0">
 						<tr>
 							<td align="left" valign="middle" colspan="2">
-								<input type="text" id="ordernumber" name="ordernumber" placeholder="Description" autocomplete="off" />
+								<input type="text" id="ordernumber" name="ordernumber" placeholder="Description" />
 							</td>
 						</tr>
 						<tr>
 							<td align="left" valign="middle" colspan="2">
-								<input type="number" step="any" min="0" id="ordertotal" name="ordertotal" placeholder="Amount" autocomplete="off" />
+								<input type="number" step="any" min="0" id="ordertotal" name="ordertotal" placeholder="Amount" />
 							</td>
 						</tr>
 						<tr>
