--- a/index.html
+++ b/index.html
@@ -256,8 +256,7 @@
 		</div>
 
 		<div class="powered">
-			Powered by <a href="http://bips.me" title="%company_name" class="blank" target="_blank">BIPS</a> |
-			<a title="Ensure that when paying this invoice, you send the exact bitcoin amount displayed. Market rates vary and it is the bitcoin amount that is the denominator for the invoice to be paid in full.">Support</a>
+			Powered by <a href="http://bips.me" title="BIPS" class="blank" target="_blank">BIPS</a>
 		</div>
 	</body> 
 </html>
